//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  email String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  activatedAt DateTime
  deletedAt DateTime
  phoneNumber String [unique, not null]
  accessCode String [unique, not null]
  posts Post [not null]
  participation Participation
  userStatus UserStatus [not null]
  userStatusId String [not null, default: 'initialized']
  invitations Invitation [not null]
  messages Message [not null]
}

Table UserStatus {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  User User [not null]
}

Table Admin {
  id String [pk]
  email String [unique, not null]
  password String [not null]
  post Post [not null]
  invitation Invitation [not null]
}

Table Post {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  image String [not null]
  reading Float [not null, default: 0]
  postStatus PostStatus [not null]
  postStatusId String [not null]
  statusChangedBy Admin
  statusChangedById String
  postedBy User [not null]
  postedById String [not null]
  notes String
  rejectionReason RejectionReason
  rejectionReasonId String
  size Float [not null, default: 0]
}

Table RejectionReason {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  Post Post [not null]
}

Table PostStatus {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  Post Post [not null]
}

Table Message {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  message String [not null]
  sentBy User [not null]
  sentById String [not null]
}

Table Participation {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  totalIncentive Float [not null]
  user User [not null]
  userId String [unique, not null]
}

Table IncentiveTable {
  id String [pk]
  index Int [not null]
  incentive Float [not null]
}

Table Invitation {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  sentBy Admin
  sentById String
  sentTo User [not null]
  sentToId String [not null]
}

Table LastQualtricsResponseRetrieval {
  id String [pk]
}

Ref: User.userStatusId > UserStatus.id

Ref: Post.postStatusId > PostStatus.id

Ref: Post.statusChangedById > Admin.id

Ref: Post.postedById > User.id

Ref: Post.rejectionReasonId > RejectionReason.id

Ref: Message.sentById > User.id

Ref: Participation.userId - User.id

Ref: Invitation.sentById > Admin.id

Ref: Invitation.sentToId > User.id